@@ -55,6 +55,8 @@ apport (0.45) UNRELEASED; urgency=low
       instead, use the topmost function with a known name, or leave it out
       at all.
     - Add test cases for these situations.
+  * apport/report.py, _get_ignore_dom(): Do not throw an error for an empty
+    ignore list file.
 
   Code cleanups:
 
@@ -63,8 +65,9 @@ apport (0.45) UNRELEASED; urgency=low
   * Consistently use 'in'/'not in' instead of find() for substring searches.
   * Changed the packaging backend import, so that its methods can now be
     accessed at apport.packaging instead of apport.packging.impl.
+  * 
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 27 Jan 2007 16:41:21 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 27 Jan 2007 17:35:09 +0100
 
 apport (0.44) feisty; urgency=low
 
